@@ -1,3 +1,8 @@
+2012-01-19  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51904
+	* gfortran.dg/intrinsic_size_2.f90: New.
+
 2012-01-19  Jason Merrill  <jason@redhat.com>
 
 	PR c++/51889
